<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tracking">

    <fragment
        android:id="@+id/nav_workouts"
        android:name="com.runner.academy.ui.workout.WorkoutListFragment"
        android:label="@string/menu_workouts"
        tools:layout="@layout/fragment_workout_list" />

    <fragment
        android:id="@+id/nav_add_workout"
        android:name="com.runner.academy.ui.workout.AddWorkoutFragment"
        android:label="@string/menu_add_workout"
        tools:layout="@layout/fragment_add_workout">
        <argument
            android:name="workoutId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
    <fragment
        android:id="@+id/nav_tracking"
        android:name="com.runner.academy.ui.tracking.WorkoutTrackingFragment"
        android:label="@string/workout_fragment_label"
        tools:layout="@layout/fragment_workout_tracking" />

    <fragment
        android:id="@+id/nav_workout_detail"
        android:name="com.runner.academy.ui.workout.WorkoutDetailFragment"
        android:label="@string/workout_details_label"
        tools:layout="@layout/fragment_workout_detail">
        <argument
            android:name="workoutId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.runner.academy.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_my_plan"
        android:name="com.runner.academy.ui.trainingplan.MyPlanFragment"
        android:label="@string/menu_my_plan"
        tools:layout="@layout/fragment_my_plan" />

    <fragment
        android:id="@+id/nav_templates"
        android:name="com.runner.academy.ui.trainingplan.TemplateListFragment"
        android:label="@string/menu_templates"
        tools:layout="@layout/fragment_template_list" />

    <fragment
        android:id="@+id/nav_template_edit"
        android:name="com.runner.academy.ui.trainingplan.TemplateEditFragment"
        android:label="@string/template_edit_title"
        tools:layout="@layout/fragment_template_edit">
        <argument
            android:name="templateId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/nav_plans"
        android:name="com.runner.academy.ui.trainingplan.PlanListFragment"
        android:label="@string/menu_plans"
        tools:layout="@layout/fragment_plan_list" />

    <fragment
        android:id="@+id/nav_plan_edit"
        android:name="com.runner.academy.ui.trainingplan.PlanEditFragment"
        android:label="@string/plan_edit_title"
        tools:layout="@layout/fragment_plan_edit">
        <argument
            android:name="planId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.runner.academy.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
